 Sim: Simplify output mechanism
 Sim: Use /dev/ptmx if posix_openpt isn't available
 Sim: Optionally attach a screen session
 Sim: Add "Cycle" generator
 Sim: Add longdesc to generators so they can self-document
 Docs: Add manpage for obdsim-dbus
 Sim: Convert to C++. Make simport abstract class
 Sim: Implement posix, windows simport classes
 Logger: Don't offer to daemonise on windows

Version 0.10 (released 2009-10-31)
 Logger, conf: Ability to adjust serial baudrate
 Initial add of ftdi-pty proxy for systems without ftdi-sio
 conf: Add ability to write config file back to disk
 ftdipty can modify config file for obdgpslogger
 Logger, conf: Ability to configure logfile name
 Logger: Gracefully exit if a serial write fails
 Logger,doc: Hotplug docs
 Logger: cygwin compilation fixes
 Sim: Don't build socket generator without getaddrinfo symbol
 Logger: If obd device isn't available, exit [would log gps before]

Version 0.9 (released 2009-09-25)
 Logger: Create indices on tables when the tables are created
 obd2kml: Small table optimisations
 New tool: obdlogrepair. Small tool to fix any minor issues in logfile
 obdsim: Initial add of socket generator [for wifi obd devices]
 obd2csv: Take --start and --end time parameters
 obd2csv: add option to gzip csv file
 obdsim: dbus plugin work with more types on the bus
 config,logger: Make columns to log run-time configurable
 obd2kml: Add date to start & end beacons
 Logger: fix stupid wait on startup
 Logger: Adding ability to handle OBD errors

Version 0.8 (released 2009-09-04)
 Put Copyright/GPL notices in all files
 Cosmetic build improvements
 obdsim: Add idle callback to generators
 obdsim: Messing with serial comms
 logger: Make newline configurable
 logger: Add timeout on database in case someone's scraping it
 obdsim: Initial add of fltk gui generator
 logger: Add option to daemonise
 obdsim: Add mode to all getvalue module calls
 logger: Catch SIGTERM to gracefully exit